--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "vitest run"
+    "test": "vitest traverse -u"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,8 @@
     "@babel/helper-hoist-variables": "^7.18.6",
     "@babel/helper-module-imports": "^7.18.6",
     "@babel/helper-plugin-utils": "^7.18.6",
+    "@babel/parser": "^7.18.11",
+    "@babel/traverse": "^7.18.11",
     "doctrine": "^3.0.0",
     "fs-extra": "^10.1.0",
     "vite": "^3.0.0",
