--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "vitest traverse -u"
+    "test": "vitest code-compression -u"
   },
   "keywords": [],
   "author": "",
